# compare-algorithms

./: README.md  result_analysis.md
CompareAlgorithms/: CMakeLists.txt  algorithms.h  main.cpp
CompareAlgorithms/Google_tests/: AlgorithmsTest.cpp  AlmostSortedTest.cpp  BigNumbersTest.cpp  CMakeLists.txt  ReverseSortedTest.cpp  SmallNumbersTest.cpp
CompareAlgorithms/algorithms/: bubble-sort.cpp  count-sort.cpp  insertion-sort.cpp  merge-sort.cpp  quick-sort.cpp  selection-sort.cpp
CompareAlgorithms/utils/: console-util.cpp  data-service.cpp  data-service.h  io-util.h  logger.cpp  logger.h
data/: collection_1.csv  collection_2.csv  collection_3.csv  collection_4.csv  collection_5.csv  collection_6.csv  collection_7.csv  collection_8.csv
